--- a/core/res/res/values-cs/strings.xml
+++ b/core/res/res/values-cs/strings.xml
@@ -152,7 +152,7 @@
 
     <string name="shutdown_progress" msgid="2281079257329981203">"Vypínání\u2026"</string>
     <string name="reboot_progress">"Restart\u2026"</string>
-    <string name="shutdown_confirm" msgid="649792175242821353">"Váš telefon bude vypnut."</string>
+    <string name="shutdown_confirm" msgid="649792175242821353">"Telefon bude vypnut."</string>
     <string name="reboot_confirm">"Telefon bude restartován."</string>
     <string name="recent_tasks_title" msgid="3691764623638127888">"Nejnovější"</string>
     <string name="no_recent_tasks" msgid="279702952298056674">"Žádné nedávno použité aplikace."</string>
