--- a/core/res/res/values/strings.xml
+++ b/core/res/res/values/strings.xml
@@ -398,6 +398,9 @@
     <!-- status message in phone options dialog for when airplane mode is off -->
     <string name="global_actions_airplane_mode_off_status">Airplane mode is OFF</string>
 
+    <!-- label for item that toggles status bar visibility -->
+    <string name="global_actions_toggle_statusbar">Toggle statusbar</string>
+
     <!-- Text to use when the number in a notification info is too large
          (greater than status_bar_notification_info_maxnum, defined in
          values/config.xml) and must be truncated. May need to be localized
