Storage: Added short label (1/6) [framework]
Added short label to StorageVolume, so it can be used
in some case, like in Camera, where description is too
long and translated name is not visible completely.

INTSD -> Internal SD
EXTSD -> External SD
USB -> Usb storage

Change-Id: I12b89e391a64de59676eb31c018e337cf41db6f6

--- a/core/res/res/values/strings.xml
+++ b/core/res/res/values/strings.xml
@@ -3343,12 +3343,18 @@
 
     <!-- Storage description for internal storage. [CHAR LIMIT=NONE] -->
     <string name="storage_internal">Internal Storage</string>
+    <!-- Storage description for internal storage. [CHAR LIMIT=5] -->
+    <string name="storage_label_internal" translatable="false">EMMC</string>
 
     <!-- Storage description for the SD card. [CHAR LIMIT=NONE] -->
     <string name="storage_sd_card">SD Card</string>
+    <!-- Storage description for the SD card. [CHAR LIMIT=5] -->
+    <string name="storage_label_sd_card" translatable="false">SD</string>
 
     <!-- Storage description for USB storage. [CHAR LIMIT=NONE] -->
     <string name="storage_usb">USB storage</string>
+    <!-- Storage description for USB storage. [CHAR LIMIT=5] -->
+    <string name="storage_label_usb" translatable="false">USB</string>
 
     <!-- Button text for the edit menu in input method extract mode. [CHAR LIMIT=16] -->
     <string name="extract_edit_menu_button">Edit...</string>
